# freephil-docs

./: .gitignore  README.md  pyproject.toml  test_markdown.py
.github/workflows/: pypi-publish.yaml
freephil_docs/: markdown.py  version.py
