[build-system]
requires = [
  "setuptools >= 40.9.0",
  "setuptools-scm",
  "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "freephil-docs"
authors = [{name = "Jan Stránský", email = "jan.stransky@ibt.cas.cz"}]
dynamic = ["version"]
description = "Tool to create nice documentation of PHIL parameters"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["phil", "freephil"]
license = {text = "GNU GPL 3"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
  "Operating System :: OS Independent",
  "Topic :: Documentation"
]
dependencies = [
  "freephil",
]

[tool.setuptools]
packages = ["freephil_docs"]


[tool.setuptools.dynamic]
version = {attr = "freephil_docs.version.version"}

#[project.scripts]
#  "hil_docs" = "freephil_docs.__main__:main"
